--- a/config.cgi.sample
+++ b/config.cgi.sample
@@ -41,9 +41,10 @@ sub htmlFoot {
 #  , "ir3dv"
 #);
 
-#@monitorAgents= (
-#  ["db0fhn", "http://urlto/jsondata"]
-#);
+#@monitorAgents= (["db0fhn", "http://monitoring"]);
+#@routingAgents= (["db0fhn", "http://monitoring"]);
+#@tracerouteAgents= (["db0fhn", "http://monitoring"]);
+#$monitoring_API= "http://monitoring";
 
 # uncomment and fill in information to activate profile-calculation
 #$profile_path_program= "/path/to/program/profile";
