--- a/config.cgi.sample
+++ b/config.cgi.sample
@@ -52,6 +52,7 @@ sub htmlFoot {
 #$profile_path_errorlog= "/path/to/logfile";
 #$profile_errorimg= "error.png"
 #$profile_path_color= "/path/to/cols.txt";
+#$profile_path_local_api= "http://127.0.0.1/rftools/calc_profile.cgi";
 
 #$visibility_path_program= "/path/to/program/visibility";
 #$visibility_path_srtm= "/path/to/srtm";
